# rst

./: .dockerignore  .gitignore  Dockerfile  README.md  c_band_cadences_list.txt  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml
notebooks/: visualize_processed.ipynb
scripts/: build_dataset.py  evaluate.py  infer.py  plot_probability_distribution.py  scan_cadences.py  scan_srt_band.py  train.py  visualize_attention.py
src/: __init__.py
src/data/: augmentation.py  background_extractor.py  cadence_generator.py  dataset.py  preprocessing.py  signal_generator.py
src/evaluation/: evaluate.py  metrics.py
src/inference/: engine.py
src/models/: __init__.py  rst_model.py
src/rst_seti/: __init__.py  hardware.py  hub.py
src/rst_seti/cli/: __init__.py  build_backgrounds.py  build_dataset.py  evaluate.py  infer.py  train.py
src/rst_seti/data/: cadence_generator.py  noise_generator.py  signal_generator.py
src/rst_seti/evaluation/: __init__.py
src/rst_seti/inference/: __init__.py  engine.py
src/rst_seti/training/: __init__.py
src/rst_seti/utils/: __init__.py  visualization.py
src/training/: trainer.py
src/utils/: __init__.py  visualization.py
